tdf#96750 docx - ensure all styles are initialized

Change-Id: I50467cb2798ef81dd89006768c66aa7e93cb411c